apps/linkding/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apps-linkding
  labels:
    istio-injection: enabled
