apps/linkding/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: linkding-svc
  namespace: apps-linkding
spec:
  selector:
    app: linkding
  ports:
    - port: 80
      targetPort: 9090
