apps/linkding/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: linkding-vs
  namespace: apps-linkding
spec:
  hosts:
    - linkding.nenad.cloud
  gateways:
    - istio-ingress/homelab-gateway
  http:
    - route:
        - destination:
            host: linkding-svc
            port:
              number: 80
